# advent-of-code-2020

./: .gitlab-ci.yml  README.md
advent/: Cargo.toml
advent/src/lib/: bitset.rs  coordinate.rs  lib.rs  make_string.rs
docker/: builder.Dockerfile
scripts/: challenge.py
