[package]
name = "advent"
version = "0.1.0"
authors = ["matthew.smedberg <matthew.smedberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent"
path = "src/lib/lib.rs"

[dependencies]
regex = "1"
lazy_static = "1.4"
itertools = "0.9"
modinverse = "0.1"

[profile.release]
lto = true
